Added mroe command line options

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,6 @@ anyhow = "1.0"
 async-trait = "0.1.78"
 colored = "2.1.0"
 clap = "4.5.3"
+prometheus = "0.13.3"
+tempfile = "3.10.1"
+futures = "0.3.30"
