--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ serde = "1.0.197"
 flate2 = "1.0.28"
 env_logger = "0.11.5"
 object_store = { version = "0.11", features = ["aws", "azure", "gcp", "http"]}
+url = "2.5.2"
