--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ path = "src/main.rs"
 name = "index_identifiers"
 path = "src/index_identifiers_main.rs"
 
+[[bin]]
+name = "db_index"
+path = "src/db_index.rs"
+
 
 [[bin]]
 name = "extract_events"
@@ -42,3 +46,4 @@ flate2 = "1.0.28"
 env_logger = "0.11.5"
 object_store = { version = "0.11", features = ["aws", "azure", "gcp", "http"]}
 url = "2.5.2"
+rocksdb = "0.21"
